# teloxide-dispatching

./: Cargo.toml
src/: core.rs  lib.rs
src/core/: context.rs  demux.rs  dispatcher.rs  error_handler.rs  guard.rs  handler.rs  service.rs  store.rs
src/core/handler/: parser_handler.rs
src/handlers/: messages.rs  parser.rs  updates.rs
tests/: teloxide.rs  tests.rs
