[package]
name = "teloxide-dispatching"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide-core = { git = "https://github.com/teloxide/teloxide-core", branch = "improve_docs" }
# actix-web = "3"
tokio = { version = "1.0.2", features = ["rt", "macros"] }
futures = "0.3.12"
